# jsonrs

./: mix.exs
.github/workflows/: ci.yml
lib/: jsonrs.ex
native/jsonrs/: Cargo.toml
